# BattleshipGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Battlefield.h  BattlefieldUIX.h  Bot.h  Field.h  GameWindow.h  MyWidget.h  PlacementShipsBot.h  Ship.h  ShipItem.h  ShooterBot.h
src/: Battlefield.cpp  BattlefieldUIX.cpp  Bot.cpp  Field.cpp  GameWindow.cpp  MyWidget.cpp  PlacementShipsBot.cpp  Ship.cpp  ShipItem.cpp  ShooterBot.cpp
tests/: FieldTest.cpp  ShipTest.cpp
